--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@ng-select/ng-select": "^10.0.4",
     "@ngrx/component-store": "^15.4.0",
     "@ngrx/effects": "^15.4.0",
     "@ngrx/router-store": "^15.4.0",
     "@ngrx/store": "^15.4.0",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.1.3",
+    "jsplumb": "^2.15.6",
     "ngx-bootstrap": "^10.2.0",
     "ngx-mask": "^13.1.4",
     "ngx-toastr": "^16.1.1",
@@ -36,6 +39,7 @@
     "@angular-devkit/build-angular": "^15.2.6",
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.0",
+    "@angular/localize": "^15.2.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
