--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "jsplumb": "^2.15.6",
+    "lodash": "^4.17.21",
     "ngx-bootstrap": "^10.2.0",
     "ngx-mask": "^13.1.4",
     "ngx-toastr": "^16.1.1",
@@ -47,6 +48,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@angular/localize": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/lodash": "^4.14.194",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
